Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -103,12 +103,12 @@
 \end{figure}
 
 
-\section{Impact Force Identification}
+\section{Impact and Damming Reaction forces.}
 \begin{itemize}
     \item Video evidence and filtered signals revealed that debris impact occurs in two stages:
     \begin{itemize}
-        \item First impact: initial strike on the unsubmerged structure (Fig.~\ref{fig:first_impact}). 
-        \item Later impacts: submerged strikes caused by overtopping, suction, and recirculation (Fig.~\ref{fig:second_impact}).
+        \item First impact: initial impact on the unsubmerged structure (Fig.~\ref{fig:first_impact}). 
+        \item Later impacts: submerged impacts caused by overtopping, suction, and recirculation (Fig.~\ref{fig:second_impact}).
         \item  The first impact is characterized by one simultaneous impact while later impacts show to be more scattered and chaotic especially for high debris numbers (Fig.~\ref{fig:timehist_24L_peak}).
     \end{itemize}
     \item This behavior was consistent across debris types and configurations, highlighting the need to distinguish between first and late peaks.
@@ -118,22 +118,22 @@
     \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{first_impact.jpg}
-        \caption{Initial unsubmerged strike.}
+        \caption{Initial unsubmerged impact.}
         \label{fig:first_impact}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{second_impact.jpg}
-        \caption{Later submerged strike.}
+        \caption{Later submerged impact.}
         \label{fig:second_impact}
     \end{subfigure}
-    \caption{Impact events: (a) initial unsubmerged strike and (b) later submerged strike.}
+    \caption{Impact events: (a) initial unsubmerged impact and (b) later submerged impact.}
     \label{fig:impact_combined}
 \end{figure}
 
 
-\section{Results: Impact Forces}
+\section{Results: Impact Reaction Forces}
 
 \subsection{Regular Configurations}
 \begin{itemize}
@@ -148,19 +148,19 @@
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.8\textwidth]{FirstPeak_Regular_RemappedT.png}
-    \caption{First peak forces in regular arrangements (remapped).}
+    \caption{First peak forces in regular configurations (remapped).}
     \label{fig:firstpeak_regular_remap}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.8\textwidth]{LaterPeak_Regular_RemappedT.png}
-    \caption{Later peak forces in regular arrangements (remapped).}
+    \caption{Later peak forces in regular configurations (remapped).}
     \label{fig:laterpeak_regular_remap}
 \end{figure}
 \subsection{Random Configurations}
 \begin{itemize}
-    \item Random debris fields produced more scattered and generally smaller peaks compared to regular arrangements. The overall variability of the data increased (Fig.~\ref{fig:random_peaks_first}). 
+    \item Random debris fields produced more scattered and generally smaller peaks compared to regular configurations. The overall variability of the data increased (Fig.~\ref{fig:random_peaks_first}). 
     \item Multi-size fields consistently yielded lower impact magnitudes because smaller blocks contributed less momentum (Figs.~\ref{fig:random_peaks_first}, \ref{fig:boxplot_8}, \ref{fig:boxplot_16}, \ref{fig:boxplot_24}). Multi-impact vs.\ single-impact scenarios became more relevant with larger debris groups, as multiple smaller blocks often struck separately rather than together.
     \item The influence of surface area density was critical in impact likelihood and synchronization:
     \begin{itemize}
@@ -200,12 +200,12 @@
 \end{figure}
 
 
-\section{Results: Damming Forces}
+\section{Results: Damming Reaction Forces}
 \begin{itemize}
     \item Damming forces, extracted by low-pass filtering, reflected sustained blockage (Figs.~\ref{fig:damming_regular_remap}, \ref{fig:damming_random}).
     \item Single-size debris: increasing density led to stable jams and higher damming loads, as expected from tighter packing and reduced bypassing flow.
     \item Multi-size debris: smaller blocks prevented stable blockages, keeping forces lower and making density effects minimal (Fig.~\ref{fig:damming_random}).
-    \item Longitudinal vs.\ transverse: while the overall magnitudes were comparable, transverse cases produced higher damming loads once debris counts exceeded eight. This supports the broader trend that longitudinal arrangements dominate impact peaks, while transverse arrangements dominate damming.
+    \item Longitudinal vs.\ transverse: while the overall magnitudes were comparable, transverse cases produced higher damming loads once debris counts exceeded eight. This supports the broader trend that longitudinal configurations dominate impact peaks, while transverse configurations dominate damming.
     \item Nonlinear behavior was observed, with damming forces saturating at higher debris counts. This parallels the nonlinear growth seen in the later submerged impact stage. This saturation is partly due to the complete blockage being achieved and partly due to debris pieces recirculating.
 \end{itemize}
 
@@ -214,7 +214,7 @@
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.8\textwidth]{Damming_Regular_L_T_SplitByTrial_Remapped.png}
-    \caption{Damming forces in regular arrangements.}
+    \caption{Damming forces in regular configurations.}
     \label{fig:damming_regular_remap}
 \end{figure}
 
