Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -180,23 +180,28 @@
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.8\textwidth]{Boxplot_Density_vs_PeakValues_8Debris.png}
-    \caption{First peaks, 8 pieces.}
-    \label{fig:boxplot_8}
-\end{figure}
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{Boxplot_Density_vs_PeakValues_16Debris.png}
-    \caption{First peaks, 16 pieces.}
-    \label{fig:boxplot_16}
-\end{figure}
-
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{Boxplot_Density_vs_PeakValues_24Debris.png}
-    \caption{First peaks, 24 pieces.}
-    \label{fig:boxplot_24}
+    \begin{subfigure}[b]{0.32\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_8Debris.png}
+        \caption{First peaks, 8 pieces.}
+        \label{fig:boxplot_8}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.32\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_16Debris.png}
+        \caption{First peaks, 16 pieces.}
+        \label{fig:boxplot_16}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.32\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_24Debris.png}
+        \caption{First peaks, 24 pieces.}
+        \label{fig:boxplot_24}
+    \end{subfigure}
+    \caption{Normalized first peak values for different debris counts.}
+    \label{fig:boxplots_side_by_side}
 \end{figure}
 
 
