--- a/main.tex
+++ b/main.tex
@@ -174,7 +174,7 @@
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.8\textwidth]{First_Peak_Random_Single_vs_Multi_ByDensityGradient.png}
-    \caption{First peak forces in random fields.}
+    \caption{First impact forces in random fields.}
     \label{fig:random_peaks_first}
 \end{figure}
 
@@ -183,24 +183,24 @@
     \begin{subfigure}[b]{0.32\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_8Debris.png}
-        \caption{First peaks, 8 pieces.}
+        \caption{First impacts, 8 pieces.}
         \label{fig:boxplot_8}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.32\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_16Debris.png}
-        \caption{First peaks, 16 pieces.}
+        \caption{First impacts, 16 pieces.}
         \label{fig:boxplot_16}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.32\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_24Debris.png}
-        \caption{First peaks, 24 pieces.}
+        \caption{First impacts, 24 pieces.}
         \label{fig:boxplot_24}
     \end{subfigure}
-    \caption{Normalized first peak values for different debris counts.}
+    \caption{Normalized first impact values for different debris counts.}
     \label{fig:boxplots_side_by_side}
 \end{figure}
 
