--- a/main.tex
+++ b/main.tex
@@ -210,25 +210,20 @@
     \caption{Later impact forces in random fields.}
     \label{fig:random_peaks_later}
 \end{figure}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.7\textwidth]{Impact_FirstPeaks_densities_combined.png}
+    \caption{First impact peaks. Single and Multi types are distinguished by marker shape.}
+    \label{fig:first_peaks_combined}
+\end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \begin{subfigure}[b]{0.48\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Impact_FirstPeaks_densities combined.png}
-        \caption{First impact peaks.}
-        \label{fig:first_peaks_combined}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.48\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Impact_LaterPeaks_densities combined.png}
-        \caption{Later impact peaks.}
-        \label{fig:later_peaks_combined}
-    \end{subfigure}
-    \caption{Normalized impact values (median per trial) across densities for different debris numbers. Single and Multi types are distinguished by marker shape.}
-    \label{fig:impact_peaks_combined}
+    \includegraphics[width=0.7\textwidth]{Impact_LaterPeaks_densities_combined.png}
+    \caption{Later impact peaks. Single and Multi types are distinguished by marker shape.}
+    \label{fig:later_peaks_combined}
 \end{figure}
+
 
 \section{Results: Damming Reaction Forces}
 \begin{itemize}
