Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -180,28 +180,9 @@
 
 \begin{figure}[htbp]
     \centering
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_8Debris.png}
-        \caption{First impacts, 8 pieces.}
-        \label{fig:boxplot_8}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_16Debris.png}
-        \caption{First impacts, 16 pieces.}
-        \label{fig:boxplot_16}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Boxplot_Density_vs_PeakValues_24Debris.png}
-        \caption{First impacts, 24 pieces.}
-        \label{fig:boxplot_24}
-    \end{subfigure}
-    \caption{Normalized first impact values for different debris counts.}
-    \label{fig:boxplots_side_by_side}
+    \includegraphics[width=0.7\textwidth]{Impact_FirstPeaks_densities_combined.png}
+    \caption{First impact peaks. }
+    \label{fig:first_peaks_combined}
 \end{figure}
 
 \begin{figure}[htbp]
@@ -210,17 +191,12 @@
     \caption{Later impact forces in random fields.}
     \label{fig:random_peaks_later}
 \end{figure}
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=0.7\textwidth]{Impact_FirstPeaks_densities_combined.png}
-    \caption{First impact peaks. Single and Multi types are distinguished by marker shape.}
-    \label{fig:first_peaks_combined}
-\end{figure}
+
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.7\textwidth]{Impact_LaterPeaks_densities_combined.png}
-    \caption{Later impact peaks. Single and Multi types are distinguished by marker shape.}
+    \caption{Later impact peaks.}
     \label{fig:later_peaks_combined}
 \end{figure}
 
@@ -249,32 +225,11 @@
     \caption{Normalized damming forces in random debris fields, separated by Single and Multi debris configurations.}
     \label{fig:random_damming_gradient}
 \end{figure}
-
-
 \begin{figure}[htbp]
     \centering
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Boxplot_Density_vs_Damming_8Debris.png}
-        \caption{Damming forces, 8 debris pieces.}
-        \label{fig:boxplot_damming_8}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Boxplot_Density_vs_Damming_16Debris.png}
-        \caption{Damming forces, 16 debris pieces.}
-        \label{fig:boxplot_damming_16}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Boxplot_Density_vs_Damming_24Debris.png}
-        \caption{Damming forces, 24 debris pieces.}
-        \label{fig:boxplot_damming_24}
-    \end{subfigure}
-    \caption{Normalized damming forces for different debris counts.}
-    \label{fig:boxplots_damming_side_by_side}
+    \includegraphics[width=0.6\textwidth]{figures/Damming_Peaks_densities_combined.png}
+    \caption{Normalized damming .}
+    \label{fig:damming_peaks}
 \end{figure}
 
 
