--- a/main.tex
+++ b/main.tex
@@ -200,6 +200,13 @@
     \label{fig:later_peaks_combined}
 \end{figure}
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{Impact_probabilities.png}
+    \caption{Impact probabilities across random trials.}
+    \label{fig:impact_probabilities}
+\end{figure}
+
 
 \section{Results: Damming Reaction Forces}
 \begin{itemize}
