Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -165,6 +165,13 @@
     \label{fig:firstpeak_regular_split}
 \end{figure}
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{FirstPeak_Regular_RemappedT_MediansTrend.png}
+    \caption{Median normalized first peak values with Wide markers and trend lines.}
+    \label{fig:firstpeak_medians_trend}
+\end{figure}
+
 % \begin{figure}[htbp]
 %     \centering
 %     \includegraphics[width=0.8\textwidth]{FirstPeak_Regular_RemappedT.png}
@@ -188,6 +195,13 @@
     \end{subfigure}
     \caption{Later peak forces in regular configurations: (a) original trials, (b) remapped trials.}
     \label{fig:laterpeak_regular_split}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{LaterPeak_Regular_RemappedT_MediansTrend.png}
+    \caption{Median normalized later peak values with Wide markers and trend lines.}
+    \label{fig:laterpeak_medians_trend}
 \end{figure}
 
 % \begin{figure}[htbp]
