Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage{subcaption}
 
 \graphicspath{{figures/}}
-\title{Experimental Study of Group Effects in Tsunami Debris Impact and Damming Forces}
+\title{Group Effects of Idealized Debris Fields Driven by Tsunami-like Wave}
 \date{September 2025}
 
 \begin{document}
